@@ -45,6 +45,7 @@ banana</textarea>
   <a href="/with_simple_html#anchor">Anchor on different page</a>
   <a href="/with_html#anchor">Anchor on same page</a>
   <a href="with_html">Relative</a>
+  <a href="//<%= request.host_with_port %>/foo">Protocol</a>
   <input type="text" checked="checked" id="checked_field">
   <a href="/redirect"><img width="20" height="20" alt="very fine image" /></a>
   <a href="/with_simple_html"><img width="20" height="20" alt="fine image" /></a>
